<resources>
    <string name="app_name">Fitness</string>

    <string name="logout">Logout</string>

    <string name="sec">sec</string>
    <string name="min">min</string>
    <string name="cal">cal</string>
    <string name="ml">ml</string>

    <string name="workout_section_label">Your today\'s workout</string>
    <string name="workout_duration_label">Duration - %1s</string>
    <string name="workout_calories_label">Calories - %d cal</string>
    <string name="workout_level_label">Level - %s</string>
    <string name="workout_break_text">Nice job! Take a break!</string>
    <string name="workout_break_text_with_param">Next workout is on %s</string>
    <string name="workout_ready_text">Start</string>
    <string name="chat_with_trainer">Chat with trainer</string>
    <string name="trainer">trainer</string>

    <string name="my_goal_section_label">My goal</string>
    <string name="weight_label">Weight</string>
    <string name="calories_label">Calories</string>
    <string name="water_label">Water</string>

    <string name="my_food_section_label">My food</string>
    <string name="my_food_section_add">Add</string>
    <string name="my_food_section_view">View</string>

    <string name="my_water_section_label">My water</string>
    <string name="my_water_section_add">Add</string>
    <string name="my_water_section_view">View</string>

    <string name="statistics_today_label">Today</string>
    <string name="statistics_general_label">General</string>

    <string name="menu_water">Water</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_home">Dashboard</string>
    <string name="menu_calories">Calories</string>

    <string name="no_data_label">-</string>

    <string name="authentication_email">E-mail</string>
    <string name="authentication_password">Password</string>
    <string name="authentication_repeat_password">Repeat password</string>
    <string name="authentication_name">Name</string>
    <string name="authentication_trainer_nickname">Trainer nickname</string>
    <string name="authentication_gender">Gender</string>
    <string name="authentication_gender_female">Female</string>
    <string name="authentication_gender_male">Male</string>
    <string name="authentication_birthday">Birthday</string>
    <string name="authentication_weight">Weight</string>
    <string name="authentication_height">Height</string>
    <string name="authentication_fitness_level">Fitness level</string>
    <string name="authentication_fitness_level_light">Light</string>
    <string name="authentication_fitness_level_medium">Medium</string>
    <string name="authentication_fitness_level_hard">Hard</string>
    <string name="authentication_fitness_goal_calories">Goal calories</string>
    <string name="authentication_fitness_goal_water">Goal water</string>
    <string name="authentication_fitness_goal_weight">Goal weight</string>
    <string name="authentication_login">Login</string>
    <string name="authentication_register">Register</string>
    <string name="authentication_no_account">Have no account? Register now.</string>
    <string name="authentication_have_account">Have account? Login now.</string>
    <string name="authentication_login_credentials_error">Invalid credentials</string>

    <string name="authentication_register_general_error">Error happened. Please try again later</string>
    <string name="authentication_register_email_error">Please enter e-mail</string>
    <string name="authentication_register_password_error">Please enter password. Min length is 6 symbols</string>
    <string name="authentication_register_password_repeat_error">Passwords do not match</string>
    <string name="authentication_register_name_error">Please enter your name</string>
    <string name="authentication_register_trainer_nickname_error">Please enter your trainer nickname</string>
    <string name="authentication_register_gender_error">Please select your gender</string>
    <string name="authentication_register_weight_error">Please enter your weight</string>
    <string name="authentication_register_height_error">Please enter your height</string>
    <string name="authentication_register_fitness_level_error">Please enter your fitness level</string>
    <string name="authentication_register_goal_calories_error">Please enter your calories goal</string>
    <string name="authentication_register_goal_water_error">Please enter your water goal</string>

    <string name="edit_user_info_name">Name</string>
    <string name="edit_user_save">Save</string>
    <string name="elements_list_add_button">Add</string>

    <string name="add_water_entry_dialog_title">Add entry</string>
    <string name="add_water_entry_dialog_amount_hint">Amount (ml)</string>
    <string name="add_water_entry_dialog_save">Save</string>
    <string name="add_water_entry_dialog_cancel">Cancel</string>
    <string name="add_water_entry_dialog_water">Water</string>
    <string name="add_water_entry_dialog_tea">Tea</string>
    <string name="add_water_entry_dialog_coffee">Coffee</string>
    <string name="add_water_entry_dialog_milk">Milk</string>

    <string name="add_weight_entry_dialog_title">Add weight</string>
    <string name="add_weight_entry_dialog_hint">Value (kg)</string>


    <string name="add_calories_entry_dialog_title">Add entry</string>
    <string name="add_calories_entry_edit_dialog_title">Edit entry</string>
    <string name="add_calories_entry_dialog_name_hint">Name</string>
    <string name="add_calories_entry_dialog_weight_hint">Amount (g)</string>
    <string name="add_calories_entry_dialog_calories_hint">Calories (per 100 g)</string>
    <string name="add_calories_entry_dialog_save">Save</string>
    <string name="add_calories_entry_dialog_cancel">Cancel</string>
    <string name="add_calories_entry_dialog_delete">Delete</string>

    <string name="workout_get_ready">Get ready!</string>
    <string name="workout_pause">Pause</string>
    <string name="workout_resume">Resume</string>
    <string name="workout_finish">Finish</string>

</resources>