<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toTopOf="@id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/authentication_email"
                android:inputType="textEmailAddress" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/authentication_password"
                android:inputType="textPassword" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/authentication_repeat_password"
                android:inputType="textPassword" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/authentication_name"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1" />

            <include layout="@layout/view_gender_picker" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/authentication_weight"
                android:inputType="numberDecimal" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/authentication_height"
                android:inputType="number" />

            <include layout="@layout/view_fitness_level_picker" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/goalCalories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/defaultMargin"
                android:layout_marginBottom="8dp"
                android:hint="@string/authentication_fitness_goal_calories"
                android:inputType="number" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/goalWater"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/authentication_fitness_goal_water"
                android:inputType="number" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/trainerNickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/authentication_trainer_nickname"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1" />
        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin"
        android:backgroundTint="@color/secondary"
        android:text="@string/authentication_register"
        app:layout_constraintBottom_toTopOf="@id/progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollContainer" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin"
        android:layout_marginBottom="@dimen/defaultMargin"
        android:elevation="20dp"
        android:indeterminateTint="@color/primary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerButton"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>