<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/defaultMargin">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        style="@style/SectionLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/defaultMargin"
        android:text="@string/add_water_entry_dialog_title"
        app:layout_constraintBottom_toTopOf="@id/waterGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/waterGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/defaultMargin"
        app:layout_constraintBottom_toTopOf="@id/amountFieldLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/water"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_water_entry_dialog_water" />

        <com.google.android.material.chip.Chip
            android:id="@+id/coffee"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_water_entry_dialog_coffee" />

        <com.google.android.material.chip.Chip
            android:id="@+id/tea"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_water_entry_dialog_tea" />

        <com.google.android.material.chip.Chip
            android:id="@+id/milk"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_water_entry_dialog_milk" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amountFieldLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_water_entry_dialog_amount_hint"
        app:layout_constraintBottom_toTopOf="@id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/waterGroup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amountField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/defaultMargin"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultMargin"
        android:enabled="false"
        android:text="@string/add_water_entry_dialog_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancelButton"
        app:layout_constraintTop_toBottomOf="@id/amountFieldLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_water_entry_dialog_cancel"
        app:layout_constraintBottom_toBottomOf="@id/saveButton"
        app:layout_constraintEnd_toStartOf="@id/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/saveButton" />

</androidx.constraintlayout.widget.ConstraintLayout>