<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/defaultMargin">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        style="@style/SectionLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/defaultMargin"
        android:text="@string/add_calories_entry_dialog_title"
        app:layout_constraintBottom_toTopOf="@id/nameField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/defaultMargin"
        android:hint="@string/add_calories_entry_dialog_name_hint"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/weightField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/weightField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/defaultMargin"
        android:hint="@string/add_calories_entry_dialog_weight_hint"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/caloriesField"
        app:layout_constraintEnd_toEndOf="@id/nameField"
        app:layout_constraintStart_toStartOf="@id/nameField"
        app:layout_constraintTop_toBottomOf="@id/nameField" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/caloriesField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/defaultMargin"
        android:hint="@string/add_calories_entry_dialog_calories_hint"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/saveButton"
        app:layout_constraintEnd_toEndOf="@id/nameField"
        app:layout_constraintStart_toStartOf="@id/nameField"
        app:layout_constraintTop_toBottomOf="@id/weightField" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultMargin"
        android:enabled="false"
        android:text="@string/add_calories_entry_dialog_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancelButton"
        app:layout_constraintTop_toBottomOf="@id/caloriesField" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_calories_entry_dialog_cancel"
        app:layout_constraintBottom_toBottomOf="@id/saveButton"
        app:layout_constraintEnd_toStartOf="@id/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/saveButton" />

</androidx.constraintlayout.widget.ConstraintLayout>