<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:parentTag="com.google.android.material.card.MaterialCardView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/myFoodLabel"
            style="@style/SectionLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/defaultMargin"
            android:text="@string/my_food_section_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_icecream"
            app:layout_constraintDimensionRatio="4:3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/myFoodLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/myFoodText"
            style="@style/GoalTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:layout_marginBottom="@dimen/defaultMargin"
            android:maxLines="2"
            android:text="@string/no_data_label"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/addButton"
            app:layout_constraintEnd_toEndOf="@id/myFoodLabel"
            app:layout_constraintStart_toStartOf="@id/myFoodLabel"
            app:layout_constraintTop_toBottomOf="@id/myFoodLabel"
            app:layout_constraintWidth_default="wrap"
            tools:text="314 cal" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/my_food_section_add"
            android:layout_marginBottom="@dimen/defaultMargin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/viewButton"
            app:layout_constraintStart_toStartOf="@id/myFoodLabel"
            app:layout_constraintTop_toBottomOf="@id/image" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/viewButton"
            android:layout_width="0dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:text="@string/my_food_section_view"
            app:layout_constraintBottom_toBottomOf="@id/addButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/addButton"
            app:layout_constraintTop_toTopOf="@id/addButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</merge>